test/official_tests/constructor/return_value.lox
class Foo {
  init() {
    return "result"; // error: {"line":3,"message":"Can't return from constructor","type":"RuntimeError"}
  }
}
